# briefly

./: .env.example  .gitignore  README.md  briefly.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
briefly/: __init__.py  __main__.py  cli.py  config.py  dotenv.py  enrich.py  gpu_service.py  ids.py  merge.py  models.py  notify.py  orchestrator.py  progress.py  state.py  summarize.py  summarize_agent.py  watch.py
briefly/audio/: __init__.py  aec.py  capture.py  devices.py  preprocess.py
briefly/clients/: __init__.py  asr.py  diarize.py  http.py  transcribe.py  vad.py  whisper_wyoming.py
briefly/schemas/: brief.schema.json  meeting.schema.json  preprocess.schema.json  transcript.schema.json
deploy/diarize-gpu/: .env.example  Dockerfile  README.md  compose.yaml  requirements.txt
deploy/diarize-gpu/app/: main.py
deploy/whisperx-gpu/: .env.example  Dockerfile  README.md  compose.yaml  requirements.txt
deploy/whisperx-gpu/app/: main.py
tests/: test_aec.py  test_asr.py  test_capture_monitor.py  test_capture_session.py  test_clients.py  test_devices.py  test_dotenv.py  test_enrich.py  test_gpu_service.py  test_ids.py  test_manifest.py  test_merge.py  test_notify.py  test_orchestrator.py  test_preprocess.py  test_progress.py  test_state.py  test_summarize.py  test_summarize_agent.py  test_transcribe.py  test_transcript.py  test_watch.py
